# tt-perf

./: .gitignore  experiment_torch.py
autograd/: Makefile  common.hpp
autograd/dynamic/: autograd.hpp  nn.hpp  ops.hpp  optim.hpp
autograd/scripts/: compare_tracy.py  plot_bench_mlp.py
autograd/static/: nn.hpp  ops.hpp  value.hpp
autograd/tests/: test_attention.cpp  test_core_grid.cpp  test_linear.cpp  test_matmul.cpp  test_mean_debug.cpp  test_mesh.cpp  test_mse_debug.cpp  test_relu.cpp  test_sgd.cpp  test_softmax.cpp  test_static_autograd.cpp  test_tensor.cpp
autograd/traced/: mesh.hpp  mlp.hpp  nn.hpp  ops.hpp  optim.hpp  trace.hpp  transformer.hpp  transformer_train.hpp
configs/: bench_nanogpt.yaml
examples/: train_mlp.cpp  train_mlp_traced.cpp
py/: data.py  engine.py  experiment.py  nn.py  optim.py
scripts/: analyze_noc_cores.py  env.sh  env_debug.sh  matmul.py  matmul_2dev_distributed.py  matmul_inflection.py  matmul_inflection_2dev.py  matmul_profile.py  matmul_sweep.py  q.py  run.sh
tests/: adam_optimizer.py  causal_attention_single_and_batched.py  cross_entropy_loss.py  linear_embedding_layers.py  modular_division_dataset.py  multihead_attention.py  prime_sequence_dataset.py  relu_activation.py  sgd_optimizer.py  softmax_logsoftmax_activations.py  tensor_add_mul_matmul_tanh.py  transformer_block_forward_backward.py
tt-ml/: CMakeLists.txt  Makefile
tt-ml/src/: bench_sweep.cpp  bench_sweep_traced.cpp  simple_mlp.cpp
verify/: compare_grads.py  verify_autograd.py  verify_comparison.py  verify_fidelity.cpp  verify_mlp.py  verify_mlp_traced.cpp
(+58 files in other folders)
